Build script: added run task because Idea refuses to run the project on the module path.